# lego_audi_etron

./: .gitignore  Build_SimpleBLE.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  audi_etron.xml  package.xml
audi_etron/: __init__.py  carlikebot_system.py  lego_motor_controller.py
bringup/config/: carlikebot_controllers.yaml
bringup/launch/: carlikebot.launch.py  lego_audi_etron.launch.py
description/launch/: view_robot.launch.py  view_robot_rviz2.launch.py
description/ros2_control/: carlikebot.ros2_control.xacro
description/rviz/: carlikebot.rviz
description/urdf/: carlikebot.urdf.xacro  carlikebot_description.urdf.xacro
doc/: userdoc.rst
docker/: Dockerfile  requirements.txt  start_robot.sh
example/: motor_test.py
hardware/: carlikebot_system.cpp  lego_motor_controller.cpp
hardware/include/audi_etron/: carlikebot_system.hpp  lego_motor_controller.hpp
scripts/: demo_drive.py  publish-docker.sh  start-robot.sh  straighten_wheel.py
test/: test_carlikebot_launch.py  test_carlikebot_launch_remapped.py  test_urdf_xacro.py  test_view_robot_launch.py
